--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,7 +4,9 @@
   <div class="mb-5">
   <h1>Все посты пользователя {{ author.get_full_name }}</h1>
   <h3>Всего постов: {{ author.posts.count }}</h3>
-  {% if  user.username != author.username %}
+  <h5>Количество подписок: {{ author.follower.count }}</h5>
+  <h5>Подписчиков: {{ author.following.count }}</h5>
+  {% if user.is_authenticated and user != author %}
     {% if following %}
       <a
         class="btn btn-lg btn-light"
