--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -26,7 +26,21 @@
     и 75% при размерах экрана ≥768px
   {% endcomment %}
   <article class="col-12 col-md-9">
-    <p>Текст страницы "Технологии"</p>
+    <p>
+      Чтобы написать этот проект, мне нужно было:<br>
+    </p>
+    <ul>
+      <li>разобраться в основах HTML и вёрстки для бэкенд-разработчика;</li>
+      <li>создать основу для Django-проекта и добавить в него новые приложения;</li>
+      <li>применить MVC на практике;</li>
+      <li>использовать шаблонизатор Django;</li>
+      <li>освоить Django ORM;</li>
+      <li>написать тесты;</li>
+      <li>задеплоить проект в облако.</li>
+    </ul>
+    <p>
+      Инструменты и стек: #python #HTML #CSS #Django #Bootstrap #Unittest #Pythonanywhere
+    </p>
   </article>
 </div>
 {% endblock %}
